# LabelForge

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  IMPLEMENTATION_SUMMARY.md  LABELFORGE_V2_SUMMARY.md  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  WEB_INTERFACE_SUMMARY.md  coverage.xml  debug_lf.py  demo_web.py  example.py  launch_web.py  pyproject.toml  quick_test.py  start_web.sh  test_final_webapp.py  test_ui_components.py  v0.2.0-tracker.md  v0_2_0_STATUS_REPORT.md  v0_2_0_showcase.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  api.html  conf.py  getting-started.html  index.html  tutorials.html
docs/examples/: index.html
examples/: medical_example.py  research_example.py  v0_2_0_comprehensive_demo.py  v0_2_0_demo.py  v2_analytics_demo.py
src/labelforge/: __init__.py  __main__.py  cli.py  datasets.py  label_model.py  lf.py  types.py
src/labelforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/labelforge/analytics/: __init__.py  convergence.py  evaluation.py  interpretability.py  uncertainty.py
src/labelforge/benchmarks/: __init__.py  datasets.py  evaluation.py  metrics.py  reproducibility.py
src/labelforge/integrations/: __init__.py  huggingface.py  mlflow.py  pytorch.py  wandb.py
src/labelforge/optimization/: __init__.py  memory.py  parallel.py  profiling.py
src/labelforge/research/: __init__.py  benchmarks.py  evaluation.py  publication.py  reproducibility.py
src/labelforge/templates/: __init__.py  domain.py  nlp.py  tools.py
src/labelforge/web/: README.md  __init__.py  app.py  app.py.backup
tests/: test_basic.py  test_labelforge.py
