[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labelforge"
version = "0.1.0"
authors = [
    {name = "Sonish Sivarajkumar", email = "sonish@example.com"},
]
description = "Open-source platform for programmatic data labeling and weak supervision"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "pyyaml>=5.4.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "pre-commit>=2.15",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "pydocstyle>=6.3.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
torch = [
    "torch>=1.9.0",
    "transformers>=4.12.0",
]
web = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.0",
]
all = [
    "labelforge[dev,torch,web]",
]

[project.urls]
"Homepage" = "https://github.com/sonishsivarajkumar/LabelForge"
"Bug Reports" = "https://github.com/sonishsivarajkumar/LabelForge/issues"
"Source" = "https://github.com/sonishsivarajkumar/LabelForge"
"Documentation" = "https://labelforge.readthedocs.io"

[project.scripts]
labelforge = "labelforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/labelforge --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.pydocstyle]
inherit = false
convention = "google"
match_dir = "src"
